# kreda-orchestrator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/kreda/: main.py
src/kreda/models/: config.py  events.py  prompts.py
src/kreda/pipeline/: aligner.py  assembler.py  generator.py  synthesizer.py  typst.py
tests/: test_aligner.py  test_assembler.py  test_cli.py
