[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kreda"
version = "0.1.0"
dependencies = [
    "python-dotenv",
    "typer",
    "faster-whisper",
    "pandas",
    "opencv-python-headless",
    "numpy",
    "pycountry",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright"
]

[project.scripts]
kreda = "kreda.main:app"

[tool.setuptools.packages.find]
where = ["src"]
